- 24/09/2023
36. spf.c: refactored code
37. spf.h: removed reference to dead/not working spf explanation URLs
38. spfquery.c: exit with return value of spfcheck()
39. tests/test-indimail-mta: added spf tests
- 27/09/2023
40. svctool: clear temporary files /tmp/hostip.*
- 30/09/2023
41. svctool: added --chksender option to enable CHECKSENDER

* Fri Sep 08 2023 11:58:03 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.4-1.1%{?dist}
Release 3.0.4-1.1 Start 24/04/2023 End 08/09/2023
======= Release Highlights ================================================
o fixed functions using variable args dumping core
o RPM builds for amazon linux and mageia
o added timestamp in installation logs
===========================================================================
- 24/04/2023
01. svctool: when replacing in recontrol, use exact match
02. qmail-send.c, qmta-send.c, slowq-send.c, qsutil.c, delivery_rate.c: Use
    NULL instead of 0 for null pointer
- 25/04/2023
03. custom_error.c: removed use of static variables as function is noreturn
04. svctool: synced daemontools/minisvc, indimail-mta/svctool create_svscan
    function
- 06/05/2023
04. svctool: added --config=selinux option to create selinux module from .te
    file
05. indimail-mta.te: updated selinux rules
- 20/05/2023
06. create_services: allow creation of mysql db even if indimail is not
    installed
07. skip creation of indimail user, database if mysql_user is null
- 31/05/2023
08. Fixes for amazon linux in indimail-mta.spec
09. set_environment.c: skip local env variable processing of .defaultqueue if
    SKIP_LOCAL_ENVIRONMENT is set
10. qmail-showctl.c: restore HOME env variable after env_clear
11. dknewkey: allow non-root user to execute dknewkey
12. indimail-mta.spec, debian/indimail-mta.postinst, create_services: create
    defaultqueue parameters without DKIM signing
- 08/06/2023
13. svctool:updated for pwdlookup, inlookup changes for using /run, /var/run
14. svctool: fixes for clamd service