@@ -1112,8 +1112,8 @@ groups for daemons \fBtodo-proc\fR(8), \fBqmail-send\fR(8),
 .TP
 \fISETUSER_PRIVILEGES\fR
 Used by \fBqmail-lspawn\fR to run \fBqmail-local\fR with user's
-supplementary groups. Without this, \fBqmail-local\fR is run with the
-primary uid, primary gid of the user.
+supplementary groups for local user in the passwd database. Without this,
+\fBqmail-local\fR is run with the primary uid, primary gid of the user.
 
 .TP
 \fIVIRTUAL_PKG_LIB\fR
