@@ -50,6 +50,7 @@ Release @version@-@release@ Start 11/09/2023 End --/--/----
 40. svctool: clear temporary files /tmp/hostip.*
 - 30/09/2023
 41. svctool: added --chksender option to enable CHECKSENDER
+42. qmail-lspawn.c: skip setuser_privileges for non-etc-passwd users
 
 * Fri Sep 08 2023 11:58:03 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.4-1.1%{?dist}
 Release 3.0.4-1.1 Start 24/04/2023 End 08/09/2023
